<resources>
    <string name="app_name" translatable="false">From 1 To 9</string>
    <string name="version_app_and_date" translatable="false">1.3.0 (02.08.2024)</string>

    <string name="new_game">New game</string>
    <string name="continue_game">Continue</string>
    <string name="statistics">Statistics</string>
    <string name="how_to_play">How to play</string>

    <string name="games">Games</string>
    <string name="time">Time</string>

    <string name="games_played">Games played</string>
    <string name="games_finished">Games finished</string>
    <string name="win_rate">Win rate</string>
    <string name="min_pairs_in_finished_game">Min. pairs in \nfinished game</string>
    <string name="max_pairs_in_finished_game">Max. pairs in \nfinished game</string>

    <string name="best_time">Best time</string>
    <string name="average_time">Average time</string>

    <string name="purpose_of_the_game">Purpose of the Game \u2014 remove all digits from the game field. \n\nTo remove the digits they must satisfy the conditions described on the following pages. \n\nIf there are any digits left on the board that do not satisfy the conditions, press the "+" button.</string>
    <string name="tap_on_pair">Tap on pair of equal digits or those which add up to ten to remove all the digits from the field.</string>
    <string name="remove_vertically_horizontally">You can remove digits in adjacent cells both vertically or horizontally:</string>
    <string name="remove_in_between">You can remove digits with blank cells in between:</string>
    <string name="remove_last_first">You can remove last and first digits in adjacent rows:</string>

    <string name="congratulations_you_won">Congratulations,\n you won!</string>

    <string name="choose_game_mode">Choose game mode</string>
    <string name="classic">Classic</string>
    <string name="random">Random</string>

    <string name="okay">Okay</string>
    <string name="back">Back</string>
    <string name="next">Next</string>

    <string name="developer">Developer</string>
    <string name="orlov_danylo">Orlov Danylo</string>

    <string name="version">Version</string>

    <string name="email_subject">Feedback about \"From 1 To 9\"</string>
    
    <!-- content descriptions/-->
    <string name="about_game_button">About the application</string>
    <string name="undo_button">Revert the last action</string>
    <string name="redo_button">Restore the last undone action</string>
    <string name="add_new_digits_button">Add new digits to the game field</string>
    <string name="hint_button">Show available digits to remove</string>
    <string name="send_email_button">Send an email to the developer</string>
    <string name="rate_the_application_button">Rate the application</string>

</resources>