<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvAppTitle"
        style="@style/BaseGoldTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        app:drawableStartCompat="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppTitle" />

    <TextView
        android:id="@+id/tvDeveloperTitle"
        style="@style/BaseGoldTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/developer"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/tvDeveloper"
        style="@style/BaseGoldTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orlov_danylo"
        app:layout_constraintStart_toStartOf="@id/tvDeveloperTitle"
        app:layout_constraintTop_toBottomOf="@id/tvDeveloperTitle" />

    <ImageView
        android:id="@+id/ivSendMail"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/send_email_button"
        android:src="@drawable/ic_mail"
        app:layout_constraintBottom_toBottomOf="@id/tvDeveloper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvDeveloperTitle"
        app:tint="@color/gold" />

    <TextView
        android:id="@+id/tvVersionTitle"
        style="@style/BaseGoldTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/version"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvDeveloper"
        app:layout_constraintTop_toBottomOf="@id/tvDeveloper" />

    <TextView
        android:id="@+id/tvVersion"
        style="@style/BaseGoldTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_app_and_date"
        app:layout_constraintStart_toStartOf="@id/tvVersionTitle"
        app:layout_constraintTop_toBottomOf="@id/tvVersionTitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnRateApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rate_the_application_button"
        android:gravity="bottom"
        android:src="@drawable/ic_star"
        app:backgroundTint="@color/gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>