<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvStatisticsTitle"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rgGameModes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectangle_border_2dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvStatisticsTitle"
            tools:checkedButton="@id/rbClassic">

            <RadioButton
                android:id="@+id/rbClassic"
                style="@style/ToggledRadioButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/classic" />

            <RadioButton
                android:id="@+id/rbRandom"
                style="@style/ToggledRadioButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/random" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvGames"
            style="@style/TextViewSubtitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="12dp"
            android:src="@drawable/ic_game_controller"
            android:text="@string/games"
            app:drawableStartCompat="@drawable/ic_game_controller"
            app:drawableTint="@color/gold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgGameModes" />

        <LinearLayout
            android:id="@+id/containerGames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rectangle_border_2dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGames">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/games_played" />

                <TextView
                    android:id="@+id/tvGamesPlayed"
                    style="@style/TextViewSubtitleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/gold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/games_finished" />

                <TextView
                    android:id="@+id/tvGamesFinished"
                    style="@style/TextViewSubtitleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/gold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/win_rate" />

                <TextView
                    android:id="@+id/tvWinRate"
                    style="@style/TextViewSubtitleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="75%" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/gold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/min_pairs_in_finished_game" />

                <TextView
                    android:id="@+id/tvMinPairs"
                    style="@style/TextViewSubtitleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    tools:text="1222" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/gold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/max_pairs_in_finished_game" />

                <TextView
                    android:id="@+id/tvMaxPairs"
                    style="@style/TextViewSubtitleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="428" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvTime"
            style="@style/TextViewSubtitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="12dp"
            android:text="@string/time"
            app:drawableStartCompat="@drawable/ic_hourglass"
            app:drawableTint="@color/gold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerGames" />

        <LinearLayout
            android:id="@+id/containerTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rectangle_border_2dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTime">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/best_time" />

                <TextView
                    android:id="@+id/tvBestTime"
                    style="@style/TextViewSubtitleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="55:12" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/gold"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    style="@style/TextViewSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/average_time" />

                <TextView
                    android:id="@+id/tvAverageTime"
                    style="@style/TextViewSubtitleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="3:22:32" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>